fixed button margins; img widths; Chat overflow

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -237,7 +237,7 @@ body {
         text-align: center;
       }
       .chat-history {
-        min-height: 400px;
+        max-height: 400px;
         display: flex;
         flex-direction: column;
         background: #212121;
@@ -471,6 +471,9 @@ body {
   }
   .modal-btns {
     margin-bottom: 30px;
+    .btn-post {
+      margin: 0 !important;
+    }
   }
   button {
     align-self: center;
@@ -493,7 +496,7 @@ body {
   img {
     margin: 10px 0 20px;
     align-self: center;
-    width: 400px;
+    width: 350px;
   }
 }
 
